src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
    'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  color: white;
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

h1 {
  color: #209cee;
}

h2 {
  color: #209cee;
}

h3 {
  color: #209cee;
}

.color-light-blue {
  color: #209cee;
}

.inline {
  display: inline;
}

li span {
  display: block;
  font-size: 50px;
  font-weight: bold;
}

.count-down-timer {
  display: block;
  list-style-type: disc;
  text-transform: uppercase;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  padding-inline-start: 0;
}

.count-down-timer-element {
  display: inline-block;
  margin-left: 10px;
  margin-right: 10px;
}

.count-down-timer-unit {
  font-size: 14px;
}

.episodes-list {
  display: flex;
  flex-wrap: wrap;
}

.episode-block {
  border: 1px solid grey;
  border-radius: 10px;
  background-color: #eee;
  color: black;
  flex: 22%;
  margin-left: 1%;
  margin-right: 1%;
  margin-top: 1%;
  margin-bottom: 1%;
}

@media screen and (max-width: 1400px) {
  .episode-block {
    flex: 45%;
    margin-left: 2%;
    margin-right: 2%;
  }
}

@media screen and (max-width: 700px) {
  .episode-block {
    margin-left: 4%;
    margin-right: 4%;
    margin-top: 2%;
    margin-bottom: 2%;
    flex: 90%;
  }

  .episodes-watch-order {
    font-size: 24px;
  }

  .introduction {
    margin-left: 10px;
    margin-right: 10px;
  }

  .introduction-line {
    margin-bottom: 10px;
  }

  .episodes-watch-order-introduction {
    margin-left: 10px;
    margin-right: 10px;
  }

  .episodes-watch-order-introduction-line {
    margin-bottom: 10px;
  }
}

@media screen and (max-width: 400px) {
  .episode-header {
    padding-left: 1px;
    padding-right: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media screen and (min-width: 401px) {
  .episode-header {
    padding: 10px;
  }
}

@media screen and (min-width: 701px) {
  .episodes-watch-order {
    font-size: 30px;
  }
}

.episodes-watch-order-introduction {
  margin-bottom: 10px;
}

.episode-header {
  font-weight: bold;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

.episode-header > div {
  display: inline;
}

.episode-locked {
  float: left;
  cursor: not-allowed;
}

.episode-arrow {
  background: transparent;
  border: 0;
  font-size: 20px;
  vertical-align: middle;
  line-height: 20px;
}

.episode-up {
  float: left;
  cursor: pointer;
}

.episode-down {
  float: right;
  cursor: pointer;
}

.episode-content {
  padding: 10px;
}

.bg-color-yellow {
  background-color: yellow;
}

.bg-color-green {
  background-color: green;
  color: white;
}

.bg-color-blue {
  background-color: blue;
  color: white;
}

.bg-color-violet {
  background-color: violet;
}

.bg-color-orange {
  background-color: orange;
}

.bg-color-red {
  background-color: red;
  color: white;
}

.bg-color-pink {
  background: linear-gradient(110deg, pink 50%, #964b00 50%);
}

.bg-color-white {
  background-color: white;
}

.episodes-emoji {
  display: inline;
}

.basic-button {
  font-size: 14px;
  padding: 10px;
  color: white;
  border-radius: 10px;
  font-weight: bold;
}

.sort-button {
  margin-left: 5px;
  margin-right: 5px;
  margin-top: 5px;
  margin-bottom: 5px;
}

.buttons {
  margin-bottom: 5px;
  margin-top: 5px;
}

.button-enabled {
  background-color: #1f79e8;
  cursor: pointer;
}

.button-disabled {
  background-color: gray;
  cursor: not-allowed;
}

.inline-block {
  display: inline-block;
}

.share-range {
  display: block;
  margin-top: 10px;
  margin-bottom: 20px;
  position: relative;
  display: flex;
  flex-flow: column wrap;
  align-items: center;
}

.share-range-text {
  font-size: 16px;
}

